--- a/3cR8ruusPRsF74yEDpTBK2/vercel.json
+++ b/3cR8ruusPRsF74yEDpTBK2/vercel.json
@@ -1,16 +1,8 @@
 {
-  "version": 2,
-  "name": "fifa-world-cup-2026",
-  "builds": [
+  "rewrites": [
     {
-      "src": "index.html",
-      "use": "@vercel/static"
-    }
-  ],
-  "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "/index.html"
+      "source": "/(.*)",
+      "destination": "/index.html"
     }
   ]
 }
