--- a/3cR8ruusPRsF74yEDpTBK2/vercel.json
+++ b/3cR8ruusPRsF74yEDpTBK2/vercel.json
@@ -1,7 +1,16 @@
 {
+  "functions": {
+    "app/**/*.{js,ts,jsx,tsx}": {
+      "runtime": "@vercel/node@3.1.5"
+    }
+  },
   "rewrites": [
     {
-      "source": "/(.*)",
+      "source": "/",
+      "destination": "/index.html"
+    },
+    {
+      "source": "/((?!api).*)",
       "destination": "/index.html"
     }
   ]
