--- a/vercel.json
+++ b/vercel.json
@@ -1,16 +1,7 @@
 {
-  "functions": {
-    "app/**/*.{js,ts,jsx,tsx}": {
-      "runtime": "@vercel/node@3.1.5"
-    }
-  },
   "rewrites": [
     {
-      "source": "/",
-      "destination": "/index.html"
-    },
-    {
-      "source": "/((?!api).*)",
+      "source": "/(.*)",
       "destination": "/index.html"
     }
   ]
